--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
+  <link rel="apple-touch-icon" href="./apple-touch-icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Yours Only ♡ 密码页</title>
 </head>
